--- a/style.css
+++ b/style.css
@@ -1,96 +1,246 @@
 body{
 	margin: 0;
 	padding: 0;
-	background: #1c1c1c;
+	background: #1d242c;
 }
-header{
-	width: 100%;
-	height: 300px;
-}
-header h1{
-	margin: 0;
-	padding-top: 150px;
-	font-size: 38px;
-	text-align: center;
-	color: #fff;
-	text-transform: uppercase;
-	letter-spacing: 40px;
-	font-weight: 700;
-	display: block;
-}
+
+
 nav{
-	width: 100%;
-	height: 60px;
 	position: fixed;
-	background: #1c1c1c;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100px;
+	padding: 10px 100px;
+	box-sizing: border-box;
+	transition: .3s;
 	z-index: 1;
 }
-ul{
-	display: inline-block;
-	float: right;
-	margin-right: 100px;
+
+.black {
+	background: rgba(0,0,0,0.8);
+	height: 100px;
+	padding: 10px 100px;
 }
-li{
-	list-style-type: none;
-}
-a{
+
+nav .logo{
+	padding: 22px 20px;
+	height: 80px;
+	float: left;
+	font-size: 30px;
+	transition: .3s;
 	color: #fff;
-	text-decoration: none;
-	font-size: 25px;
-	margin: 15px;
-}
-a:hover{
-	color: #0076c0;
 }
 
+nav .black .logo{
+	color: #fff;
+}
 
-
-
-.about {
-	width: 100%;
-	max-width: 1065px;
+nav ul{
+	list-style: none;
+	float: right;
+	margin: 0;
+	padding: 0;
 	display: flex;
+}
+
+nav ul li{
+	list-style: none;
+}
+
+nav ul li a{
+	line-height: 80px;
+	color: #151515;
+	padding: 12px 30px;
+	text-decoration: none;
+	text-transform: uppercase;
+	transition: .3s;
+	margin-left: 5px;
+}
+
+nav ul li a:hover{
+	border-radius: 10px;
+	background: #00fa9a;
+}
+
+.black ul li a{
+	color: #fff;
+}
+
+nav ul li a:focus{
+	outline: none;
+}
+
+
+
+
+
+header{
+	width: 100%;
+	height: 800px;
 	margin: 0 auto;
-	justify-content: center;
-	background: #232635;
+	background: url(img/peter-background.png);
+}
+
+header h1{
+	position: absolute;
+	top: 26%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	text-transform: uppercase;
+	letter-spacing: 20px;
+	font-size: 56px;
+	font-weight: 700;
+	color: #fff;
+	text-align: center;
 }
 
 
-.about .box {
-	width: 550px;
-	height: 500px;
-	background: none;
-	margin: 10px;
+
+
+
+
+
+
+.greeting{
+	width: 100%;
+	height: 300px;
+	background: #002331;
+	margin: -50px auto;
+	text-align: center;
 }
 
+.greeting h1{
+	font-size: 38px;
+	letter-spacing: 5px;
+	color: #fff;
+}
 
-
-.about  p{
-	margin: 50px;
+.greeting p{
 	font-size: 28px;
 	color: #fff;
 }
 
-.about .photo {
+.main1{
+	width: 100%;
+	height: 600px;
+	background: url(img/cafe.jpg) no-repeat;
+	display: flex;
+	margin: 0 auto;
+	justify-content: center;
+	flex-wrap: wrap;
+}
+
+.main1 .box{
+	width: 600px;
+	height: 500px;
+	margin: 50px;
+}
+
+.main1 .me{
+	background: #fff;
+}
+
+.main1 .me h1{
+	text-align: center;
+	font-size: 38px;
+	color: #00fa9a;
+}
+
+.main1 .me p{
+	font-size: 30px;
+	color: #111;
+	margin: 50px;
+}
+
+.main1 .block{
+	width: 600px;
+	height: 500px;
+}
+
+.main1 .avatar{
 	width: 250px;
 	height: 400px;
-	background: #0076c0;
-	margin-left: 50%;
+	margin: 40px 40%;
 }
-.about .photo img{
+
+.main1 h2{
+	color: #00fa9a;
+	text-align: center;
+}
+
+.main1 img{
 	width: 100%;
 	height: 100%;
 }
+
+.main1 .photo{
+	width: 250px;
+	height: 400px;
+	background: none;
+}
+
+.main2{
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+
+}
+
+.main2 .box{
+	width: 600px;
+	height: 500px;
+	margin: 50px;
+}
+
+.main2 .know{
+	background: #002331;
+}
+
+.main2 img{
+	width: 100%;
+	height: 100%;
+}
+
+.main2 .know ul{
+	display: inline-block;
+}
+
+.main2 .know li{
+	color: #00fa9a;
+	font-size: 28px;
+	margin: 50px 30px;
+
+}
+
+.main2 .know h1{
+	text-align: center;
+	color: #00fa9a;
+}
+
+.main2 #photo{
+	width: 350px;
+	height: 400px;
+	margin: 50px;
+}
+
+
+
+@media screen and (max-width: 600px){
+}
+
+
+
+
+
 
 
 .wrapper{
-	display: grid;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
 	width: 100%;
-	max-width: 1065px;
 	height: 100%;
-	margin: 30px auto;
-	grid-template-columns: repeat(5, 1fr);
-	grid-template-rows: repeat(6, 1fr);
 	margin: 0 auto;
 }
 .wrapper img{
@@ -105,128 +255,15 @@ a:hover{
 	transition: 0.9s;
 }
 .box{
-	background: #0076c0;
 	overflow: hidden;
+	width: 350px;
+	height: 350px;
 }
-.item-1{
-	grid-column: span 2;
-	grid-row: span 2;
-}
-.item-2{
-	grid-column: span 2;
-	grid-row: span 2;
-}
-.item-3{
-	grid-column: span 1;
-	grid-row: span 2;
-}
-.item-4{
-	grid-column: span 2;
-	grid-row: span 2;
-}
-.item-5{
-	grid-column: span 1;
-	grid-row: span 2;
-}
-.item-6{
-	grid-column: span 2;
-	grid-row: span 2;
-}
-.item-7{
-	grid-column: span 3;
-	grid-row: span 2;
-}
-.item-8{
-	grid-column: span 2;
-	grid-row: span 2;
-}
-
-.info{
-	width: 100%;
-	max-width: 1065px;
-	height: 200px;
-	background: #232635;
-	margin: 50px auto;
-	display: flex;
-	justify-content: center;
-}
-
-.info .boxis{
-	margin-top: 40px;
-	width: 200px;
-}
-
-.info .boxis img{
-	width: 50%;
-	margin: 0 auto;
-	display: block;
-}
-
-.info .boxis p{
-	color: #fff;
-}
-
-
-#main {
-	position: relative;
-	margin: 50px auto;
-	padding: 5px;
-	width: 100%;
-	max-width: 1065px;
-	height: 460px;
-	border-radius: 15px;
-}
-#scr {
-	margin: 20px auto;
-	width: 1065px;
-	height: 420px;
-	margin-top:20px;
-	background-color: white;
-	background-size:cover;
-}
-button {
-	position: absolute;
-	top: 150px;
-	width: 50px;
-	height: 50px;
-	font: 12pt arial,tahoma,sans-serif;
-	text-align: center;
-	background: white;
-	border-radius: 30px;
-	border: 5px solid #0076c0;
-	margin-left: 5px;
-	margin-right: 5px;
-	margin-top: 50px;
-	outline: none;
-}
-.left {
-	left: 5px;
-}
-.right {
-	right: 5px;
-}
-
-
 
 
 footer{
 	width: 100%;
-	max-width: 1065px;
-	height: 200px;
-	background: #222;
+	height: 500px;
+	background: #111;
 	margin: 0 auto;
-}
-
-footer .container{
-	display: flex;
-	justify-content: center;
-	margin: 0 auto;
-}
-
-footer .container .box{
-	width: 70px;
-	height: 70px;
-	background: #fff;
-	margin: 70px;
-	border-radius: 40px;
 }
