--- a/style.css
+++ b/style.css
@@ -71,6 +71,56 @@ nav ul li a:focus{
 	outline: none;
 }
 
+.open {
+	color: #fff;
+	font-size: 30px;
+	float: right;
+	display: none;
+	cursor: pointer;
+	margin: 20px;
+}
+
+.right-bar{
+	width: 0%;
+	overflow-x: hidden;
+	height: 100vh;
+	z-index: 2;
+	position: fixed;
+	background: rgba(34, 65, 93, 0.9); 
+	transition: .3s;
+	display: block;
+}
+
+.right-bar a{
+	color: #fff;
+	font-size: 24px;
+	text-decoration: none;
+	display: block;
+	font-family: Source Sans Pro;
+	padding: 30px;
+	text-align: center;
+	transition: .3s;
+} 
+
+
+#close{
+	font-size: 50px;
+	margin-left: 90%;
+}
+
+.right-bar a:not(:first-child):hover {
+	background-size: #b37020;
+}
+
+@media screen and (max-width: 1200px) {
+	 .menu ul a {
+		display: none;
+	}
+	.open{
+		display: block;
+	}
+}
+
 
 
 
@@ -114,6 +164,7 @@ header h1{
 	font-size: 38px;
 	letter-spacing: 5px;
 	color: #fff;
+	padding-top: 50px;
 }
 
 .greeting p{
@@ -122,8 +173,6 @@ header h1{
 }
 
 .main1{
-	width: 100%;
-	height: 600px;
 	background: url(img/cafe.jpg) no-repeat;
 	display: flex;
 	margin: 0 auto;
@@ -156,6 +205,7 @@ header h1{
 .main1 .block{
 	width: 600px;
 	height: 500px;
+	margin: 0 auto;
 }
 
 .main1 .avatar{
@@ -174,7 +224,7 @@ header h1{
 	height: 100%;
 }
 
-.main1 .photo{
+.main1 .photo{	
 	width: 250px;
 	height: 400px;
 	background: none;
@@ -184,7 +234,6 @@ header h1{
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: center;
-
 }
 
 .main2 .box{
@@ -195,6 +244,7 @@ header h1{
 
 .main2 .know{
 	background: #002331;
+	box-shadow: -4px 8px 16px -4px #000000;
 }
 
 .main2 img{
@@ -226,8 +276,7 @@ header h1{
 
 
 
-@media screen and (max-width: 600px){
-}
+
 
 
 
